About Us: Fix overflow in "Our Team" section.

--- a/styles/components/_our-team.scss
+++ b/styles/components/_our-team.scss
@@ -6,6 +6,10 @@
           -11deg, $color-black 0%, $color-black 50%, $color-white 50%
   );
 
+  @media only screen and (max-width: $breakpoint-medium) {
+    max-height: max-content;
+  }
+
   &__inner {
   }
 
@@ -20,6 +24,11 @@
     display: flex;
     gap: 3rem;
     margin-bottom: 4rem;
+
+    @media only screen and (max-width: $breakpoint-medium) {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
   }
 
   &__card {
@@ -31,6 +40,10 @@
     align-items: center;
     gap: 2rem;
     flex: 1 1 27rem;
+
+    @media only screen and (max-width: $breakpoint-medium) {
+      flex: 0 1 27rem;
+    }
   }
 
   &__picture {
