--- a/styles/styles.css
+++ b/styles/styles.css
@@ -632,6 +632,11 @@ a {
   padding: 0 1rem 25.8rem 1rem;
   background-image: linear-gradient(-11deg, #000000 0%, #000000 50%, #ffffff 50%);
 }
+@media only screen and (max-width: 56.25em) {
+  .our-team {
+    max-height: max-content;
+  }
+}
 .our-team__text {
   margin-bottom: 4rem;
 }
@@ -639,6 +644,12 @@ a {
   display: flex;
   gap: 3rem;
   margin-bottom: 4rem;
+}
+@media only screen and (max-width: 56.25em) {
+  .our-team__cards {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
 .our-team__card {
   padding: 3rem;
@@ -649,6 +660,11 @@ a {
   align-items: center;
   gap: 2rem;
   flex: 1 1 27rem;
+}
+@media only screen and (max-width: 56.25em) {
+  .our-team__card {
+    flex: 0 1 27rem;
+  }
 }
 .our-team__img {
   margin-bottom: 2rem;
